# wildlife-detector

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml
apps/: streamlit_app.py
configs/: data.yaml  train.yaml
data/: README.md
docs/: PROJECT_DOCUMENTATION.md
notebooks/: README.md
scripts/: make_synthetic_dataset.py  run_webcam.sh
src/wildlife_detector/: __init__.py  cli.py  config.py
src/wildlife_detector/data/: __init__.py  augment.py  prepare.py
src/wildlife_detector/detection/: __init__.py  detector.py  tracker.py  video.py
src/wildlife_detector/evaluation/: __init__.py  evaluator.py  metrics.py
src/wildlife_detector/training/: __init__.py  trainer.py
src/wildlife_detector/utils/: __init__.py  boxes.py  logging.py  viz.py
tests/: test_augment.py  test_boxes.py  test_cli.py  test_config.py  test_metrics.py  test_prepare.py  test_tracker.py
